src/objects/Repayment_Transaction_Adjustment__c.object
<CustomObject>
    <description>Repayment Transaction Adjustment Object</description>
    <fields>
        <fullName>Adjustment_Txn_Date__c</fullName>
        <defaultValue>$User.Current_Branch_s_System_Date__c</defaultValue>
        <description>Adjustment Txn Date</description>
        <inlineHelpText>Adjustment Txn Date</inlineHelpText>
        <label>Adjustment Txn Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cleared__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cleared</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loan_Payment_Transaction__c</fullName>
        <description>Loan Payment Transaction</description>
        <inlineHelpText>Loan Payment Transaction</inlineHelpText>
        <label>Loan Payment Transaction</label>
        <referenceTo>Loan_Payment_Transaction__c</referenceTo>
        <relationshipName>Repayment_Transaction_Adjustment</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Receipt_ID__c</fullName>
        <displayFormat>RATID-{0000000000}</displayFormat>
        <label>Receipt ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Rejected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rejected</label>
        <type>Checkbox</type>
    </fields>
    <label>Repayment Transaction Reversal</label>
    <nameField>
        <displayFormat>RTA-{0000000000}</displayFormat>
        <label>Repayment Transaction Adjustment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Repayment Transaction Reversal</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Check_Clear_Flag</fullName>
        <active>true</active>
        <errorConditionFormula>(Loan_Payment_Transaction__r.Cleared__c == false &amp;&amp; Loan_Payment_Transaction__r.Rejected__c == false) ||  Loan_Payment_Transaction__r.Rejected__c == true</errorConditionFormula>
        <errorMessage>An uncleared or rejected payment transaction cannot be reversed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_Existing_Reversal_Txn</fullName>
        <active>true</active>
        <errorConditionFormula>ISNEW() &amp;&amp;  Loan_Payment_Transaction__r.Cleared_Reversal_Txn_Count__c &gt; 0</errorConditionFormula>
        <errorMessage>This repayment transaction has already been reversed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Transaction_Date_Check</fullName>
        <active>true</active>
        <errorConditionFormula>Adjustment_Txn_Date__c &gt; TODAY()</errorConditionFormula>
        <errorMessage>Transaction date cannot be greater than calendar date.</errorMessage>
    </validationRules>
</CustomObject>